--- a/platforms/android/assets/www/config.json
+++ b/platforms/android/assets/www/config.json
@@ -1,5 +1,5 @@
 {
-"app_id" : "com.moodle.moodlemobile",
+"app_id" : "com.hlg.moodle",
 "versioncode" : "371",
 "versionname" : "1.4",
 "cache_expiration_time" : 300000,
